--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,16 @@
+<!-- <div class="container"> -->
+<div id="taskArchiveDiv">
+    <h2>Completed Tasks Archive</h2>
+    <br>
+</div>
+
+<footer>
+Created by 
+<a href='#' target=blank>Jesica Ababon</a>
+ © 2018
+</footer>
+
+
 </body>
 
 </html>
