--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,31 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/client/style.css" />
 </head>
 
 <body>
+
+    <header>
+<h1>"You may delay, but time will not..."
+    <h4> -Ben Franklin</h4>
+</h1>
+
+
+    </header>
+    <div class="container">
+        <div id='create'>
+            <form action="submit">
+                Task
+                <input type="text" name="createTask" id="createText" placeholder="Write Task"> Due Date
+                <input type="date" name="createTask" id="createDate" placeholder="Task Due Date">
+                <button type="submit" name="createTask" id="createButton">Create Task</button>
+            </form>
+        </div>
+        <br>
+        </div>
 
