--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -1,5 +1,27 @@
 <% include ../partials/header.ejs %>
 
+<h2>TO DO LIST</h2>
+
+
+<% tasks.forEach(task => { %>
+    <div>
+        <h3>
+            <%= task.subject %>
+        </h3>
+    </div>
+
+    <div>
+        <%= task.content %>
+
+    </div>
+
+    <div>
+        <%= task.due_date %>
+    </div>
+
+    <br>
+
+    <% }); %>
 
 
     <% include ../partials/footer.ejs %>
