--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -5,8 +5,7 @@
                 <input type="text" name="subject" id="createSubject" placeholder="Subject">
                 <label>CONTENT</label>
                 <input type="text" name="content" id="createContent" placeholder="Content">
-
-                <label>Due Date</label>
+                <label>DUE DATE</label>
                 <input type="date" name="due_date" id="dueDate">
                 <button type="submit" id="createButton">Create Task</button>
             </form>
