--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,6 @@
 body{
     text-align: center;
+    margin: 5%;
 }
 
 header{
@@ -16,6 +17,13 @@ header{
 #create{
     justify-content: space-between;
     align-content: center;
+}
+
+.task{
+    border: 2px solid black;
+    margin: 0 10%;
+    padding: 5px;
+
 }
 
 #taskArchiveDiv{
