delete works now

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,8 +11,8 @@ Created by
 
 
 </body>
-<script>
+<!-- <script>
 function removeDiv(){const elem = document.getElementsByClassName('task'); elem.parentNode.removeChild(elem); return false;};
 //source: https://stackoverflow.com/questions/5933157/how-to-remove-an-html-element-using-javascript
-</script>
+</script> -->
 </html>
