--- a/views/tasks/index.ejs
+++ b/views/tasks/index.ejs
@@ -12,12 +12,22 @@
                 <br>
                 <b>DUE:</b>
                 <%= task.due_date %>
+            
+            <br>
+<form method="POST" action="/tasks/<%= task.task_id %>?_method=PUT">
+    <button type="submit" id="updateButton">Update Task</button>
+</form>
+<br>
+<form method="POST" action="/tasks/<%=task.task_id %>?_method=DELETE">
+    <button type="submit">DELETE TASK</button>
+</form>
 
             </div>
-            <br>
+
+
 
 
 
             <% }); %>
 
-                <% include ../partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
