--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -2,12 +2,13 @@
         <div id='create'>
             <form action="/tasks" method="POST">
                 <label>SUBJECT</label>
-                <input type="text" name="subject" id="createSubject" placeholder="Subject">
+                <input type="text" name="subject" id="createSubject" placeholder="Subject"><br>
                 <label>CONTENT</label>
-                <input type="text" name="content" id="createContent" placeholder="Content">
+                <input type="text" name="content" id="createContent" placeholder="Content"><br>
                 <label>DUE DATE</label>
                 <input type="date" name="due_date" id="dueDate">
-                <button type="submit" id="createButton">Create Task</button>
+                <br>
+                <button type="submit" id="createButton">CREATE NEW TASK</button>
             </form>
         </div>
         <br>
