--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-<div id="taskArchiveDiv">
+<!-- <div id="taskArchiveDiv">
     <h2>Completed Tasks Archive</h2>
     <br>
-</div>
+</div> -->
 
 <footer>
 Created by 
