--- a/views/tasks/index.ejs
+++ b/views/tasks/index.ejs
@@ -8,7 +8,7 @@
         <% tasks.forEach(task => { %>
             <div class="task">
                 <div class="display">
-                <h3><%= task.subject %>:</h3>
+                <h3><%= task.subject %></h3>
                 <%= task.content %>
                 <br>
                 <h5>DUE:
