--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -2,9 +2,9 @@
         <div id='create'>
             <form action="/tasks" method="POST">
                 <label>SUBJECT</label>
-                <input type="text" name="subject" id="createSubject" placeholder="Subject"><br>
+                <input type="text" name="subject" id="createSubject" placeholder="SUBJECT"><br>
                 <label>CONTENT</label>
-                <input type="text" name="content" id="createContent" placeholder="Content"><br>
+                <input type="text" name="content" id="createContent" placeholder="CONTENT"><br>
                 <label>DUE DATE</label>
                 <input type="date" name="due_date" id="dueDate">
                 <br>
